lab_11.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: app
            operator: In
            values:
            - redis
  replicas: 1
  template:
   metadata:
    labels:
     app: web
   spec:
    containers:
    - name: web
      image: nginx:1.7.9

//-----------------------------------------------------------------------------

apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: app
            operator: NotIn
            values:
            - mysql
  replicas: 1
  template:
   metadata:
    labels:
     app: redis
   spec:
    containers:
    - name: redis
      image: nginx:1.7.9


//-----------------------------------------------------------------------------

apiVersion: v1
kind: Pod
metadata:
  name: mysql
spec:
  replicas: 1
  template:
   metadata:
    labels:
     app: mysql
  spec:
    containers:
    - name: mysql
      image: nginx:1.7.9
