lab_15.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-music-deployment
spec:
  selector:
    matchLabels:
      app: spring-music
  replicas: 2
  template:
    metadata:
      labels:
        app: spring-music
    spec:
      containers:
      - name: spring-music
        image: yanivomc/spring-music:latest
        ports:
        - containerPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: spring-music-srv
spec:
  selector:
    app: spring-music
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
