ingress-svc.ip.nip.io.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-moose
  annotations:
    ngnix.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: moose.34.248.159.187.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moose-svc
            port:
              number: 80
